--- a/app/views/explan_card.scala.html
+++ b/app/views/explan_card.scala.html
@@ -41,7 +41,7 @@
                                     <div class="list-group-item" >
                                         <div class="row m-0">
                                             <div class="col-sm self-align-start">
-                                                <strong><em>@node.getQueryAsReadableString()</em></strong>
+                                                <strong><em>@fact(node.getQueryAsFact())</em></strong>
                                             </div>
 
 
