--- a/app/views/explans.scala.html
+++ b/app/views/explans.scala.html
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="col-md-12">
 
-                        <div class="alert alert-secondary" role="alert">
+                        <div class="alert alert-info" role="alert">
                             <h4 class="alert-heading">Explain a fact!</h4>
                             <p>Write your candidate fact, a set of rules and press explain!</p>
                         </div>
