--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,7 +4,10 @@
 * two arguments, a `String` for the title of the page and an `Html`
 * object to insert into the body of the page.
 *@
-@(title: String)(content: Html)
+
+@import Models.ExampleQueries
+
+@(title: String, exampleQueries: ExampleQueries)(content: Html)
 
 
 <!DOCTYPE html>
@@ -27,7 +30,8 @@
         @*<link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/switch.css")' type="text/css">*@
 
 
-        <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/theme.scss")" >
+        @*<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/theme.scss")" >*@
+        <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/main.css")" >
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
 
@@ -35,6 +39,10 @@
         <script data-main="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.js")" type="text/javascript" src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.js")" ></script>
 
         <script data-main="@routes.Assets.versioned("lib/popper.js/popper.js")" type="text/javascript" src="@routes.Assets.versioned("lib/popper.js/popper.js")" ></script>
+
+        <script src="https://twitter.github.io/typeahead.js/js/handlebars.js"></script>
+        <script data-main="@routes.Assets.versioned("javascripts/typeahead.js/typeahead.jquery.js")" type="text/javascript" src="@routes.Assets.versioned("javascripts/typeahead.js/typeahead.jquery.js")" ></script>
+        <script data-main="@routes.Assets.versioned("javascripts/typeahead.js/typeahead.bundle.js")" type="text/javascript" src="@routes.Assets.versioned("javascripts/typeahead.js/typeahead.bundle.js")" ></script>
 
         @*<script data-main="@routes.Assets.versioned("javascripts/checkboxes.js")" type="text/javascript" src="@routes.Assets.versioned("javascripts/checkboxes.js")" ></script>*@
 
@@ -83,10 +91,28 @@
                                     Explaining facts over Knowledge Graph and Text!</p>
                             </div>
                         </div>
-                        <div class="col-md-12">
+
+                        <div class="row py-1">
+                            <div class="input-group col-sm">
+                                <select class="custom-select custom-select-sm" id="example_select" aria-label="Select an example">
+                                    <option  value="-1" selected>Choose an example ...</option>
+//                                    @for((example, index) <- exampleQueries.getList().zipWithIndex) {
+                                        <option s value="@{routes.ExplainController.example(index)}"> Example @example.getId(): @example.getName()</option>
+                                    }
+
+                                    @*<option value="2">Example 2</option>*@
+                                    @*<option value="3">Example 3</option>*@
+                                </select>
+                                @*<div class="input-group-append">*@
+                                    @*<button class="btn btn-outline-primary btn-sm" type="button" id="pickexample"><span class="fas fa-play fa-sm"></span></button>*@
+                                @*</div>*@
+                            </div>
+                        </div>
+                        <div class="row">
+                        <div class="col-sm-12">
                            @options(null)
                         </div>
-
+                        </div>
                     </div>
 
                     <!-- Content-->
@@ -128,8 +154,28 @@
         @*<script script-src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>*@
         @*<script script-src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>*@
         @*<script script-src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>*@
+<script >
+
+        // $( "#pickexample" ).click(function() {
+        //     v=$("#example_select").options[$("#example_select").selectedIndex].value;
+        //     alert( "Handler for .click() called. "+ v );
+        //
+        // });
+
+        $('#example_select').on('change', function(e){
+
+
+            // alert(this.value);
+                    // +" "+
+                    // this.options[this.selectedIndex].value+" "+
+                    // +" "+$(this).data("url"));
+            // url=$(this).data("url");
+             $( location ).attr("href", this.value);
+        });
+</script>
 
 
 
     </body>
+
 </html>
